# flight-fusion

./: .env.test  .flake8  .gitignore  .justfile  .pre-commit-config.yaml  .prettierignore  Cargo.docker.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  buf.gen.yaml  buf.work.yaml  codecov.yml  compose.yml  cspell.config.yaml  deny.toml  docker-compose.yml  index.js  justfile  mkdocs.yml  package.json  pyproject.toml
examples/app/: index.py  pyproject.toml
examples/app/src/app/: __init__.py  __main__.py  context.py  index.py  themes.py
examples/model-training/: README.md  pyproject.toml
examples/model-training/model_training/: jobs.py  repo.py  resources.py
examples/model-training/model_training/assets/: __init__.py  data.py  model_training.py  training_data.py
examples/model-training/model_training/resources/: __init__.py  dataset_spec.py
examples/model-training/tests/: test_data_assets.py
k8s/schema/: pyproject.toml
k8s/schema/mlfusion_helm/: cli.py
k8s/schema/mlfusion_helm/charts/: __init__.py
k8s/schema/mlfusion_helm/utils/: __init__.py  k8s.py  utils.py
python/arrow-adx/: Cargo.toml  README.md  pyproject.toml
python/arrow-adx/arrow_adx/: __init__.py  _internal.pyi  version.py
python/arrow-adx/src/: client.rs  errors.rs  lib.rs  utils.rs
python/arrow-adx/tests/: test_imports_arrow_adx.py
python/dagster-fusion/: LICENSE.txt  README.md  pyproject.toml
python/dagster-fusion/dagster_fusion/: __init__.py  _types.py  config.py  errors.py  hooks.py  version.py
python/dagster-fusion/dagster_fusion/io/: __init__.py  artifact.py  io_manager.py  mlfusion_io_manager.py  model_io_manager.py  root_input_manager.py  table.py  table_io_manager.py
python/dagster-fusion/dagster_fusion/resources/: __init__.py  configuration.py  fusion.py  mlflow.py
python/dagster-fusion/tests/: conftest.py  test_imports_dagster.py  test_io_manager.py  test_io_manager_model.py  test_io_manager_table.py  test_mlflow_integration.py
python/flight-fusion/: Cargo.toml  README.md  pyproject.toml
python/flight-fusion-server/: Cargo.toml  README.md  pyproject.toml
python/flight-fusion-server/flight_fusion_server/: __init__.py  _internal.pyi  cli.py  version.py
python/flight-fusion-server/src/: error.rs  lib.rs  main.rs
python/flight-fusion-server/tests/: test_imports_fusion_server.py
python/flight-fusion/flight_fusion/: __init__.py  _internal.pyi  asset_key.py  cache.py  client.py  errors.py  sql.py  tags.py  testing.py  version.py
python/flight-fusion/flight_fusion/cli/: __init__.py  _config.py  _utils.py  docker.py  environment.py  server.py  start.py
python/flight-fusion/flight_fusion/clients/: __init__.py  _aio.py  _base.py  area.py  context.py  dataset.py  inference.py  model.py  repository.py  service.py
python/flight-fusion/flight_fusion/proto/: actions_pb2.py  actions_pb2.pyi  common_pb2.py  common_pb2.pyi  message_pb2.py  message_pb2.pyi  tickets_pb2.py  tickets_pb2.pyi
python/flight-fusion/src/: error.rs  lib.rs  utils.rs
python/flight-fusion/stubs/flight_fusion/: flight_fusion.pyi
python/flight-fusion/tests/: conftest.py  test_dataset_client.py  test_imports.py  test_imports_fusion.py  test_pytest_plugin.py  test_version.py  test_versioned_client.py  test_write_into_dataset.py
python/mlflow-fusion/: README.md  pyproject.toml
python/mlflow-fusion/mlflow_fusion/: artifacts.py  client.py  context.py  version.py
python/mlflow-fusion/tests/: test_artifact_repository.py  test_artifact_storage.py  test_imports_mlflow.py
python/mlserver-fusion/: README.md  pyproject.toml
python/mlserver-fusion/mlserver_fusion/: __init__.py  repository.py  runtime.py  server.py  types.py  version.py
python/mlserver-fusion/tests/: test_imports_mlserver.py
rust/area-store/: Cargo.toml  README.md
rust/area-store/src/: error.rs  lib.rs  projection.rs  schema.rs  storage_location.rs  storage_url.rs  test_utils.rs
rust/area-store/src/catalog/: disk.rs  error.rs  file_index.rs  mod.rs
rust/area-store/src/store/: area_path.rs  mod.rs  (+9 more)
rust/arrow-deps/: Cargo.toml
rust/arrow-deps/src/: lib.rs
rust/artifact-store/: Cargo.toml
rust/artifact-store/src/: lib.rs
rust/artifacts-store/: Cargo.toml
rust/artifacts-store/src/: lib.rs
rust/azure-jwt-auth/: Cargo.toml
rust/azure-jwt-auth/src/: lib.rs
rust/data_kusto/: Cargo.toml
rust/datafusion-objectstore-azure/: .gitignore  Cargo.toml
rust/datafusion-objectstore-azure/src/: error.rs  lib.rs
rust/file-cache/: Cargo.toml
rust/file-cache/src/: disk_cache.rs  error.rs  lib.rs
rust/file-cache/tests/: disk_cache.rs  lru.rs
rust/flight-fusion/: Cargo.toml  Dockerfile  README.md
rust/flight-fusion-client/: Cargo.toml
rust/flight-fusion-client/src/: error.rs  interceptor.rs  lib.rs
rust/flight-fusion-client/tests/: actions.rs  do_put.rs  setup.rs
rust/flight-fusion-ipc/: Cargo.toml  build.rs
rust/flight-fusion-ipc/src/: error.rs  errors.rs  flight_fusion.ipc.v1alpha1.rs  flight_fusion_ipc.rs  lib.rs  macros.rs  passport.rs  utils.rs
rust/flight-fusion-rpc/: Cargo.toml  build.rs
rust/flight-fusion-rpc/src/: errors.rs  flight_fusion_rpc.rs  lib.rs  passport.rs
rust/flight-fusion/examples/: catalog.rs  onnx.rs
rust/flight-fusion/src/: error.rs  lib.rs  main.rs  service.rs  settings.rs  stream.rs  test_utils.rs
rust/fusion-planner/: Cargo.toml
rust/fusion-planner/src/: error.rs  frames.rs  lib.rs  query_tree.rs  test_utils.rs
rust/kusto-client/: Cargo.toml
rust/kusto-client/src/: arrow.rs  authorization_policy.rs  client.rs  connection_string.rs  error.rs  lib.rs  models.rs  request.rs
rust/object-store/: Cargo.toml
rust/object-store/src/: azure.rs  cache.rs  disk.rs  dummy.rs  error.rs  lib.rs  memory.rs  throttle.rs
rust/observability-deps/: Cargo.toml
rust/observability-deps/src/: lib.rs
rust/open-metadata/: Cargo.toml  README.md  openmetadata.yaml  swagger.json
rust/open-metadata/examples/: databases_service.rs
rust/open-metadata/src/: generated.rs  lib.rs  prelude.rs  request_options.rs
rust/open-metadata/tests/: test_collections.rs  test_utils.rs
(+500 files in other folders)
