[tool.poetry]
name = "workspace-flight-fusion"
version = "0.1.0"
description = ""
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"

# pypi dependencies
grpcio-tools = "^1.42.0"
betterproto = { version = "2.0.0b4", extras = ["compiler"] }
dagit = "^1"
delta-spark = "^1.1.0"
mkdocs-protobuf = "^0.1"
mkdocs-techdocs-core = "^1"
mlflow = "^1.26"
mlserver = "^1.1"
mlserver-mlflow = "^1.1"
mlserver-sklearn = "^1.1"
pyspark = "^3.2.1"

# TODO remove once flask ist updated in deps
itsdangerous = "2.0.1"
werkzeug = "<2.1"

# workspace dependencies
dagster-fusion = { path = "python/dagster-fusion/", develop = true }
flight-fusion = { path = "python/flight-fusion/", develop = true, extras = [
  "docker",
  "dev",
] }
mlflow-fusion = { path = "python/mlflow-fusion/", develop = true }
mlserver-fusion = { path = "python/mlserver-fusion/", develop = true }
mlfusion-helm = { path = "k8s/schema/", develop = true }

# example projects
model-training = { path = "examples/model-training/", develop = true }
app = { path = "examples/app/", develop = true }
azure-storage-blob = "^12.11.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = { version = "^22.3.0", extras = ["jupyter"] }
flake8 = "^3.9.2"
isort = "^5.10"
ipykernel = ">=6.4.2"
maturin = "^0.12"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^3"
pytest-datadir = "^1.3.1"
ipython = ">=8.0.1"
detect-secrets = "^1.2.0"
pytest-mock = "^3.7"
azure-identity = "^1.10.0"
requests-mock = "^1.9.3"
responses = ">=0.21"
datafusion = "^0.6.0"
deltalake = "^0.5.8"
azure-storage-blob = "^12.13.1"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["python/**/*", "examples/**/*"]
known_first_party = [
  "flight_fusion",
  "dagster_fusion",
  "mlflow_fusion",
  "mlserver_fusion",
]

[tool.pyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "python/flight-fusion/flight_fusion/ipc/",
  "python/mlflow-fusion/mlflow_fusion/ipc/",
]
reportPrivateImportUsage = false

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
