[tool.poetry]
name = "workspace-flight-fusion"
version = "0.1.0"
description = ""
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"

# pypi dependencies
grpcio-tools = "^1.42.0"
betterproto = { version = "2.0.0b5", extras = ["compiler"] }
dagit = "^1"
mlflow = "^2"
mlserver = "^1.1"
mlserver-mlflow = "^1.2"
mlserver-sklearn = "^1.1"

# workspace dependencies
dagster-fusion = { path = "python/dagster-fusion/", develop = true }
flight-fusion = { path = "python/flight-fusion/", develop = true, extras = [
  "docker",
  "dev",
] }
mlflow-fusion = { path = "python/mlflow-fusion/", develop = true }
mlserver-fusion = { path = "python/mlserver-fusion/", develop = true }
mlfusion-helm = { path = "k8s/schema/", develop = true }

# example projects
model-training = { path = "examples/model-training/", develop = true }
app = { path = "examples/app/", develop = true }
azure-storage-blob = "^12.11.0"

[tool.poetry.group.dev.dependencies]
black = { version = "^22.12", extras = ["jupyter"] }
ipykernel = ">=6.4.2"
maturin = "^0.14"
pre-commit = "^2.20"
pytest = "^7"
pytest-cov = "^4"
pytest-datadir = "^1.3"
detect-secrets = "^1.2.0"
pytest-mock = "^3.7"
ruff = ">=0.0.192"
azure-identity = "^1.10.0"
requests-mock = "^1.9.3"
responses = ">=0.21"
azure-storage-blob = "^12.13.1"
llvmlite = ">=0.39.1"
numba = ">=0.56.4"

[tool.poetry.group.docs.dependencies]
mkdocs-protobuf = "^0.1"
mkdocs-techdocs-core = "^1"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.pyright]
venvPath = "."
venv = ".venv"
reportPrivateImportUsage = false
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "python/flight-fusion/flight_fusion/ipc/",
  "python/mlflow-fusion/mlflow_fusion/ipc/",
]

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
exclude = [
  '__pycache__',
  '.git',
  '.ipynb_checkpoints',
  '.venv',
  '.tox',
  '.mypy_cache',
  '.pytest_cache',
  '.vscode',
  '.github',
  'build',
  'dist',
  'typestubs',
  '*.pyi',
]
ignore = ['E501']
line-length = 120
select = ['B', 'C', 'E', 'F', "I", "S", 'W']

[tool.ruff.per-file-ignores]
"test_*" = [
  "S101", # allow asserts in test files (bandit)
]

[tool.ruff.isort]
known-first-party = [
  "flight_fusion",
  "dagster_fusion",
  "mlflow_fusion",
  "mlserver_fusion",
]
