[tool.poetry]
name = "app"
version = "0.1.0"
description = "A Dash applicationm to interact with fusion services"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
dash = "^2.4.1"
dash-antd = { version = ">=0.0.5" }
markupsafe = "<=2.0.1"
# vaex = "^4.9.2"
