[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dagster-fusion = { path = "../../python/dagster-fusion", develop = true }
dagster-mlflow = "^0.14"
scipy = "^1.8"
scikit-learn = "^1"
