[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlfusion-helm"
version = "0.1.0"
description = ""
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
typer = "^0.6"
pydantic = "^1.9"

[tool.poetry.scripts]
mlfusion-helm = "mlfusion_helm.cli:app"
