[package]
name = "arrow-adx"
version = "0.1.0"
edition = "2021"
authors = ["Robert Pack <r.pack@outlook.com>"]
description = "High performance Kusto (Azure Data Explorer) client based on Apache Arrow and Rust."
readme = "README.md"
license = "MIT"

[dependencies]
azure-kusto-data = { git = "https://github.com/Azure/azure-kusto-rust", rev = "a43fe73b7cda51e358540e9ec33bc07bccaf6cd6", features = [
  "arrow",
] }
tokio = { version = "1.18", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
pyo3 = { version = "~0.16", features = [
  "extension-module",
  "abi3",
  "abi3-py38",
] }
arrow = { version = "*", features = ["pyarrow"] }

[lib]
name = "arrow_adx"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "arrow_adx._internal"
