[package]
name = "arrow-adx"
version = "0.1.0"
edition = "2021"
authors = ["Robert Pack <r.pack@outlook.com>"]
description = "High performance Kusto (Azure Data Explorer) client based on Apache Arrow and Rust."
readme = "README.md"
license = "MIT"

[dependencies]
azure-kusto-data = { git = "https://github.com/Azure/azure-kusto-rust", rev = "827271472a51c71931e42d0b70f503574c7e0a47", features = [
  "arrow",
] }
tokio = { version = "1.18", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
pyo3 = { version = "~0.16", features = [
  "extension-module",
  "abi3",
  "abi3-py38",
] }
arrow = { version = "*", features = ["pyarrow"] }

[lib]
name = "arrow_adx"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "arrow_adx._internal"
