[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "arrow-adx"
requires-python = ">=3.7"
keywords = ["arrow", "azure", "adx", "kusto"]
authors = [{ name = "Robert Pack", email = "r.pack@outlook.com" }]
classifier = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python",
  "Programming Language :: Rust",
]

[tool.isort]
profile = "black"

[tool.maturin]
sdist-include = ["Cargo.lock"]
