[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dagster-fusion"
version = "0.1.0"
description = ""
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
dagster = "^1"
polars = ">=0.15.6"
pyarrow = ">=9"
pywin32 = { version = ">=301", markers = "platform_system == \"Windows\"" }
