[package]
name = "flight-fusion-server"
version = "0.1.0"
license = "Apache-2.0"
description = "Client to filight fusion serice"
readme = "README.md"
edition = "2021"
keywords = ["datafusion", "datalake", "pandas", "arrow"]

[lib]
name = "_internal"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "flight_fusion_server._internal"

[dependencies]
env_logger = "0"
pyo3 = { version = "0.15", features = [
  "extension-module",
  "abi3",
  "abi3-py36",
] }
# reqwest is pulled in by azure sdk, but not used by python binding itself
# for binary wheel best practice, statically link openssl
reqwest = { version = "*", features = ["native-tls-vendored"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

# workspace dependencies
flight-fusion = { path = "../../rust/flight-fusion" }
