[package]
name = "flight-fusion-server"
version = "0.2.0-dev"
edition = "2021"
authors = ["Robert Pack <r.pack@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace dependencies
artifact-store = { path = "../../rust/artifact-store/" }
flight-fusion = { path = "../../rust/flight-fusion" }
observability_deps = { path = "../../rust/observability-deps" }

# crates.io dependencies
clap = { version = "4.0.12", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
# reqwest is pulled in by azure sdk, but not used by python binding itself
# for binary wheel best practice, statically link openssl
reqwest = { version = "*", features = ["native-tls-vendored"] }
