[build-system]
requires = ["maturin>=0.11.5"]
build-backend = "maturin"

[project]
name = "flight-fusion-server"
description = "Flight fusion sevrver"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.6"
keywords = ["deltalake", "delta", "arrow", "datafusion", "arrow-flight"]
classifier = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python",
  "Programming Language :: Rust",
]
dependencies = ["typer>=0.4"]

[project.optional-dependencies]
devel = ["pytest", "pytest-mock", "pytest-cov"]

[project.urls]
repository = "https://github.com/roeap/flight-fusion"

[tool.poetry]
name = "flight-fusion"
version = "0.1.0"
description = ""
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=flight_fusion_server -v -m 'not integration'"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
  "azure: marks tests as integration tests with Azure (deselect with '-m \"not azure\"')",
]
