[package]
name = "flight-fusion-python"
version = "0.1.0"
license = "Apache-2.0"
description = "Client to filight fusion serice"
readme = "README.md"
edition = "2021"
keywords = ["datafusion", "datalake", "pandas", "arrow"]

[lib]
name = "_internal"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "flight_fusion._internal"

[dependencies]
chrono = "0"
env_logger = "0"
prost = "0.9"
# reqwest is pulled in by azure sdk, but not used by python binding itself
# for binary wheel best practice, statically link openssl
reqwest = { version = "*", features = ["native-tls-vendored"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

# workspace dependencies
flight-fusion-client = { path = "../../rust/flight-fusion-client", features = [
  "pyarrow",
] }
observability_deps = { path = "../../rust/observability-deps" }

[dependencies.pyo3]
version = "0.14"
features = ["extension-module", "abi3", "abi3-py36"]
