[package]
name = "flight-fusion-python"
version = "0.1.7"
license = "Apache-2.0"
description = "Client to filight fusion serice"
readme = "README.md"
edition = "2021"
keywords = ["datafusion", "datalake", "pandas", "arrow"]

[lib]
name = "_internal"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "flight_fusion._internal"

[dependencies]
# workspace dependencies
flight-fusion-client = { path = "../../rust/flight-fusion-client", features = [
  "pyarrow",
] }
observability_deps = { path = "../../rust/observability-deps" }

# Crates.io dependencies
env_logger = "0"
prost = "0.9"
pyo3 = { version = "0.16", features = [
  "extension-module",
  "abi3",
  "abi3-py37",
] }
# reqwest is pulled in by azure sdk, but not used by python binding itself
# for binary wheel best practice, statically link openssl
reqwest = { version = "*", features = ["native-tls-vendored"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
