[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flight-fusion"
version = "0.2.0"
description = "Client for interacting with flight fusion service"
readme = "README.md"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"
repository = "https://github.com/roeap/flight-fusion"
keywords = ["deltalake", "delta", "arrow", "datafusion", "arrow-flight"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
betterproto = "2.0.0b5"
loguru = ">=0.5"
pandas = ">=1"
pyarrow = ">=9"
pydantic = { version = ">=1", extras = ["dotenv"] }
pyyaml = "^6"
SQLAlchemy = ">=1.4"
typer = ">=0.4"

pytest = { version = "^7", optional = true }
pytest-datadir = { version = "^1.3", optional = true }

[tool.poetry.extras]
dev = ["pytest", "pytest-datadir"]

[tool.poetry.scripts]
fusion = "flight_fusion.cli:app"

[tool.poetry.plugins.pytest11]
pytest_fusion = "flight_fusion.testing"
