[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlserver-fusion"
version = "0.1.0"
description = "Customized MLServer"
readme = "README.md"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"
repository = "https://github.com/roeap/flight-fusion"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
betterproto = "2.0.0b5"
fastapi = ">=0.75"
mlserver = "^1.1"
mlserver-mlflow = "^1.2"
typer = ">=0.4"
httpx = "^0.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-azurepipelines = "^1"
pytest-datadir = "^1.3.1"
pytest-cov = "^3"
pytest-mock = "^3.7"
