[package]
name = "area-store"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
arrow-deps = { path = "../arrow-deps/", features = ["delta"] }
file-cache = { path = "../file-cache/" }
flight-fusion-ipc = { path = "../flight-fusion-ipc/" }
object-store = { path = "../object-store/" }

# Crates.io dependencies
async-trait = "0.1"
bytes = "1"
futures = "^0.3"
parquet-format = "4"
serde_json = "1"
thiserror = "1"
uuid = "*"
# TODO use less feature
tokio = { version = "1", features = ["full"] }
dashmap = "^5.2.0"

[dev-dependencies]
tempfile = "3"
