[package]
name = "area-store"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
async-compat = "*"
arrow-deps = { path = "../arrow-deps/", features = ["delta"] }
file-cache = { path = "../file-cache/" }
flight-fusion-ipc = { path = "../flight-fusion-ipc/" }
object-store = { path = "../object-store/" }
observability_deps = { path = "../observability-deps" }

# Crates.io dependencies
async-trait = "0.1"
bytes = "1"
chrono = "*"
futures = "^0.3"
parquet-format = "4"
serde_json = "1"
thiserror = "1"
uuid = "*"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
  "parking_lot",
] }
tokio-util = { version = "0.7", features = ["compat"] }
dashmap = "^5.3.1"

[dev-dependencies]
tempfile = "3"
