[package]
name = "area-store"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
arrow-deps = { path = "../arrow-deps/", features = ["delta"] }
file-cache = { path = "../file-cache/" }
flight-fusion-ipc = { path = "../flight-fusion-ipc/" }
observability_deps = { path = "../observability-deps" }

# Crates.io dependencies
async-compat = "*"
async-trait = "0.1"
bytes = "1"
chrono = "*"
futures = "^0.3"
object_store = { version = "0.3", features = ["azure"] }
parquet-format = "4"
serde_json = "1"
thiserror = "1"
uuid = "*"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
  "parking_lot",
] }
tokio-util = { version = "0.7", features = ["compat"] }
dashmap = "^5.2.0"
lazy_static = "*"
url = "2"

[dev-dependencies]
tempfile = "3"
