[package]
name = "arrow-deps"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Crates.io dependencies
arrow-flight = "20"

# Git dependencies
datafusion = { version = "11" }
deltalake = { git = "https://github.com/roeap/delta-rs", rev = "535d8b5823d4ec86d6134bb3144ece97b2b29dd6", features = [
  "datafusion-ext",
  "azure",
], optional = true }
# deltalake = { path = "../../../delta-rs/rust", features = [
#   "datafusion-ext",
#   "azure",
# ], optional = true }

[features]
delta = ["deltalake"]
