[package]
name = "arrow-deps"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Crates.io dependencies
arrow-flight = "21"

# Git dependencies
datafusion = { version = "11" }
deltalake = { git = "https://github.com/delta-io/delta-rs", rev = "729d18be46b72e0247b4512df476759156f5192d", features = [
  "datafusion-ext",
  "azure",
], optional = true }
# deltalake = { path = "../../../delta-rs/rust", features = [
#   "datafusion-ext",
#   "azure",
# ], optional = true }

[features]
delta = ["deltalake"]
