[package]
name = "arrow-deps"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Crates.io dependencies
arrow-flight = "28"

# Git dependencies
datafusion = { version = "16" }
deltalake = { git = "https://github.com/roeap/delta-rs", rev = "9b858f540597e60d59045cb9bbdb2608b6efa695", features = [
  "datafusion-ext",
  "azure",
], optional = true }
# deltalake = { path = "../../../delta-rs/rust", features = [
#   "datafusion-ext",
#   "azure",
# ], optional = true }

[features]
delta = ["deltalake"]
