[package]
name = "artifact-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
flight-fusion-ipc = { path = "../flight-fusion-ipc" }
observability_deps = { path = "../observability-deps" }

# Crates.io dependencies
async-trait = "0.1"
bytes = "1"
futures = "0.3"
object_store = { version = "0.4", features = ["azure"] }
prost = "0.11"
thiserror = "1"
tonic = { version = "0.8", features = ["gzip"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
