[package]
name = "artifacts-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
flight-fusion-ipc = { path = "../flight-fusion-ipc" }
observability_deps = { path = "../observability-deps" }

# Crates.io dependencies
bytes = "1"
object_store = { version = "*", features = ["azure"] }
