[package]
name = "azure-jwt-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8"
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
serde = { version = "1.0.124", features = ["derive"] }
chrono = "0.4.19"

[dev-dependencies]
criterion = "0.4"
base64 = "0.21"
