[package]
edition = "2021"
name = "datafusion-objectstore-azure"
description = "Azure as an ObjectStore for Datafusion"
version = "0.1.0"
homepage = "https://github.com/datafusion-contrib/datafusion-objectstore-azure"
repository = "https://github.com/datafusion-contrib/datafusion-objectstore-azure"
readme = "README.md"
authors = ["Robert Pack <r.pack@outlook.com>"]
license = "Apache-2.0"
keywords = ["arrow", "query", "sql", "datafusion"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datafusion_objectstore_azure"
path = "src/lib.rs"

[dependencies]
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "389aeb64441214543c502ed6811c783c2c7c5307" }
azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "389aeb64441214543c502ed6811c783c2c7c5307" }
azure_storage_blobs = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "389aeb64441214543c502ed6811c783c2c7c5307" }
azure_storage_datalake = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "389aeb64441214543c502ed6811c783c2c7c5307" }

# azure_core = { path = "../../../azure-sdk-for-rust/sdk/core" }
# azure_storage = { path = "../../../azure-sdk-for-rust/sdk/storage" }
# azure_storage_blobs = { path = "../../../azure-sdk-for-rust/sdk/storage_blobs" }
# azure_storage_datalake = { path = "../../../azure-sdk-for-rust/sdk/storage_datalake" }

arrow = { version = "11.0.0", features = ["prettyprint"] }
async-trait = "0.1.52"
bytes = "1.1.0"
datafusion-data-access = { git = "https://github.com/apache/arrow-datafusion.git", rev = "f619d43494e182e260423f8333eed9ea789f0cb8" }
futures = "0.3.19"
http = "0.2.6"
num_cpus = "1.13.1"
tokio = { version = "1.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
] }
