[package]
name = "file-cache"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
observability_deps = { path = "../observability-deps" }

# Crates.io dependencies
async-trait = "0.1.66"
filetime = "0.2.15"
ritelinked = { version = "0.3.2", default-features = false, features = [
  "ahash",
  "inline-more",
] }
thiserror = "1"
walkdir = "2.3.2"

[features]
amortized = ["ritelinked/ahash-amortized", "ritelinked/inline-more-amortized"]

[dev-dependencies]
tempfile = "3.2.0"
