[package]
name = "flight-fusion-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
flight-fusion-ipc = { path = "../flight-fusion-ipc" }

# Crates.io dependencies
arrow-flight = "6.3"
async-trait = "0.1"
futures = "0.3"
prost = "0.9"
thiserror = "1"
tonic = { version = "0.5.2", features = [
  "transport",
  "codegen",
  "prost",
  "tls-roots",
  "tls",
] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1"
proc-macro2 = "1"
